# orchids-videoforge-desktop-converter

./: .gitignore  next.config.ts  package-lock.json  package.json
.github/workflows/: tauri-build.yml
.orchids/: orchids.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/convert/: page.tsx
src/app/settings/: page.tsx
src/app/transcribe/: page.tsx
src/components/: FFmpegProcessor.tsx  Sidebar.tsx  TranscriptionProcessor.tsx  VideoProcessor.tsx  WhisperTranscriber.tsx
