[package]
name = "convrt"
version = "0.1.0"
description = "A modern video converter"
authors = ["Orchids"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri-plugin-shell = "2.0.0-beta"
tauri = { version = "2.9.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

whisper-rs = "0.10.0"
hound = "3.5.1"
anyhow = "1.0"
directories = "5.0"
reqwest = { version = "0.12", features = ["stream"] }
tokio-stream = "0.1"
futures-util = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
